--- a/metamask/start/index.html
+++ b/metamask/start/index.html
@@ -102,9 +102,7 @@
   </main>
   
   <!--<script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>-->
-
-  <script src="node_modules/@metamask/onboarding/dist/metamask-onboarding.bundle.js"></script>
-  <script src="contract.js"></script>
+  <script src="contract.js" defer></script>
 </body>
 
 </html>
